--- a/wings/pom.xml
+++ b/wings/pom.xml
@@ -4,10 +4,13 @@
   <artifactId>wings</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
-  <dependency>
-  <groupId>org.seleniumhq.selenium</groupId>
+  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>2.53.0</version></dependency>
+    <version>3.4.0</version>
+</dependency>
+
    
   <!-- https://mvnrepository.com/artifact/log4j/log4j -->
 <dependency>
@@ -129,6 +132,14 @@
     <version>1.3</version>
     <scope>test</scope>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.17</version>
+</dependency>
+
 
 <!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit 
 <dependency>
